2011-07-07  Dirk Pranke  <dpranke@chromium.org>

        test-webkitpy fails on chromium win
        https://bugs.webkit.org/show_bug.cgi?id=64137

        Reviewed by Eric Seidel.

        test-webkitpy doesn't play nicely with the multiprocessing
        module on win32. An earlier change actually reenabled the tests
        on win32 by mistake.

        This patch also fixes a few cases where path names will trip
        things up on win32 (e.g., by testing unix paths on windows).
        We do not lose any real coverage here with those fixes.

        * Scripts/webkitpy/layout_tests/port/chromium_gpu.py:
        * Scripts/webkitpy/layout_tests/port/chromium_gpu_unittest.py:
        * Scripts/webkitpy/layout_tests/port/mock_drt_unittest.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests_integrationtest.py:

2011-07-07  Leandro Pereira  <leandro@profusion.mobi>

        [ImageDiff] Calculate/print difference right after reading baseline image.
        https://bugs.webkit.org/show_bug.cgi?id=64117

        Reviewed by Kent Tamura.

        Otherwise, ImageDiff will block on fgets() until the universe ends or you ^C
        it.  Whichever happens first.

        * DumpRenderTree/efl/ImageDiff.cpp:
        (main):

2011-07-07  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [EFL] DRT: Leak cairo_t to make the pixel tests stop crashing
        https://bugs.webkit.org/show_bug.cgi?id=64107

        Reviewed by Kent Tamura.

        The pointer is later managed by BitmapContext, but it was being
        de-refed and deleted earlier by our RefPtr, causing crashes in all
        pixel tests.

        We now call leakRef() to make sure it is not removed when our
        createBitmapContextFromWebView goes out of context.

        * DumpRenderTree/efl/PixelDumpSupportEfl.cpp:
        (createBitmapContextFromWebView):

2011-07-07  Adam Roben  <aroben@apple.com>

        Update TestFailures's title and header immediately upon navigation
